tests/baselines/reference/parser512325.errors.txt
==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser512325.ts (7 errors) ====
    var tt = (a, (b, c)) => a+b+c;
                         ~~
!!! error TS1005: ';' expected.
              ~
!!! error TS2304: Cannot find name 'a'.
                  ~
!!! error TS2304: Cannot find name 'b'.
                     ~
!!! error TS2304: Cannot find name 'c'.
                            ~
!!! error TS2304: Cannot find name 'a'.
                              ~
!!! error TS2304: Cannot find name 'b'.
                                ~
!!! error TS2304: Cannot find name 'c'.